--- a/exam-after.ipynb
+++ b/exam-after.ipynb
@@ -14,27 +14,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The rpy2.ipython extension is already loaded. To reload it, use:\n",
+      "  %reload_ext rpy2.ipython\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext rpy2.ipython"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
@@ -50,32 +57,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
      "slide_type": "-"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "# A tibble: 6 x 2\n",
+       "      X label\n",
+       "  <dbl> <int>\n",
+       "1 2.46      0\n",
+       "2 1.55      0\n",
+       "3 5.51      0\n",
+       "4 0.119     0\n",
+       "5 7.51      0\n",
+       "6 0.800     0\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%R\n",
     "# make sure to get your data in the same folder, next to the notebook file\n",
     "# so that this will run!\n",
     "\n",
     "\n",
-    "dat <- read_csv('classification_data.csv')"
+    "dat <- read_csv(\"classification_data.csv\")\n",
+    "head (dat)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
@@ -85,6 +109,10 @@
    "outputs": [],
    "source": [
     "%%R\n",
+    " dat %>% mutate(X = parse_factor(X, NULL), \n",
+    "               lable = parse_factor(label, NULL))\n",
+    "p1 <- ggplot(dat,aes(x=X))+geom_density()\n",
+    "p2 <- ggplot(sona,aes(y=lable))+geom_density()\n",
     "\n",
     "# Your data consists of an \"X\" column and a \"label\" column\n",
     "# Use ggplot to plot a kernel density estimate of each label (overlayed on the same plot)\n",
@@ -109,7 +137,6 @@
    "execution_count": 123,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
@@ -175,7 +202,6 @@
    "execution_count": 119,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
@@ -208,7 +234,6 @@
    "execution_count": 121,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
@@ -228,7 +253,6 @@
    "execution_count": 122,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
@@ -260,7 +284,6 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
@@ -282,7 +305,6 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
@@ -312,7 +334,6 @@
    "execution_count": 124,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
@@ -335,7 +356,6 @@
    "execution_count": null,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
@@ -351,7 +371,20 @@
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   },
   "name": "Untitled.ipynb"
  },
